Bug 1405781 - don't constrain the width of the overflow panel in customize mode to avoid the scrollbar being placed outside it, r=mikedeboer
MozReview-Commit-ID: GfT7LB9abBR

UltraBlame original commit: 26b13cdf8add0e81a733f7e95f78744d61ce4636

--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -12611,6 +12611,23 @@ width
 wideMenuPanelWidth
 ;
 }
+#
+customization
+-
+panelHolder
+>
+.
+widget
+-
+overflow
+-
+list
+{
+width
+:
+auto
+;
+}
 toolbaritem
 [
 overflowedItem
